--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
